service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - name: api-port
      protocol: TCP
      port: 3040
      targetPort: 3040
    - name: get-port
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: server-port
      protocol: TCP
      port: 3013
      targetPort: 3013
    - name: serverdos-port
      protocol: TCP
      port: 8013
      targetPort: 8013
    - name: socket-port
      protocol: TCP
      port: 3050
      targetPort: 3050
  type: LoadBalancer
